--- a/_includes/components/udap/pricing-2.html
+++ b/_includes/components/udap/pricing-2.html
@@ -184,10 +184,10 @@
               margin-bottom: 15px;
             "
           >
-            <p class="font-first-color">UDS</p>
-            <p class="font-first-color">diagnosis</p>
-            <p class="font-first-color">analysis</p>
-            <p class="font-first-color">prediction</p>
+            <r class="font-first-color">UDS</r>
+            <r class="font-first-color">diagnosis</r>
+            <r class="font-first-color">analysis</r>
+            <r class="font-first-color">prediction</r>
           </div>
           <br />
           <span class="wow animated fadeInDown" style="color: black"
