--- a/_includes/components/udap/pricing-2.html
+++ b/_includes/components/udap/pricing-2.html
@@ -184,10 +184,10 @@
               margin-bottom: 15px;
             "
           >
-            <div class="font-first-color">UDS</div>
-            <div class="font-first-color">diagnosis</div>
-            <div class="font-first-color">analysis</div>
-            <div class="font-first-color">prediction</div>
+            <div class="font-first-color" style="display:inline-block">UDS</div>
+            <div class="font-first-color" style="display:inline-block">diagnosis</div>
+            <div class="font-first-color" style="display:inline-block">analysis</div>
+            <div class="font-first-color" style="display:inline-block">prediction</div>
           </div>
           <br />
           <span class="wow animated fadeInDown" style="color: black"
