--- a/assets/css/nucleo-icons.css
+++ b/assets/css/nucleo-icons.css
@@ -593,10 +593,9 @@ License - nucleoapp.com/license/
   content: "\ea65";
 }
 
-.font-first-color {
-  display: inline-block;
-  /* font-size: 1em; */
-}
+/* .font-first-color {
+  display: inline-block !important;
+} */
 
 .font-first-color::first-letter {
   color: red;  
