--- a/_includes/components/udap/pricing-2.html
+++ b/_includes/components/udap/pricing-2.html
@@ -191,7 +191,7 @@
           </div>
           <br />
           <span class="wow animated fadeInDown" style="color: black"
-            >데이터의 실시간 수집과 저장, 기사화를 통해 설비 모니터링과<br />데이터
+            >데이터의 실시간 수집과 저장, 가시화를 통해 설비 모니터링과<br />데이터
             분석 및 모델을 운영하기 위한 기반 플랫폼</span
           >
         </div>
