--- a/_includes/components/sbms/feature-3.html
+++ b/_includes/components/sbms/feature-3.html
@@ -13,7 +13,7 @@
           style="
           width: 100%;
           height: 100%;"
-          src="https://www.youtube.com/embed/hX1BeCMLCS4"
+          src="https://www.youtube.com/embed/QtxpiWs6fzk"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
           </iframe>
         </div>
